--- a/documentation/Titlepage/Titlepage.tex
+++ b/documentation/Titlepage/Titlepage.tex
@@ -1,8 +1,8 @@
-\title  {A Minimal Feature and Tile Server written in Python}
+\title  {JOSM Plugin based on OpenStreetMap with NeTEx Conversion}
 \authors  {\href{mailto:Labian.Gashi@hsr.ch}{Labian Gashi}
 }
 \addresses  {\groupname\\\deptname\\\univname}
-\date       {Fall Semester 2019}
+\date       {Spring Semester 2020}
 \subject    {}
 \keywords   {}
 
