More docu fixes

--- a/documentation/Main.tex
+++ b/documentation/Main.tex
@@ -61,8 +61,8 @@
 \appendix
 
 \input{Appendices/Installation}
-\input{Appendices/OSM Data}
-\input{Appendices/NeTEx Data}
+\input{Appendices/OSM_Data}
+\input{Appendices/NeTEx_Data}
 \input{Appendices/Project Management}
 
 \backmatter
