Documentation changes - Title Page

--- a/documentation/Titlepage/Titlepage.tex
+++ b/documentation/Titlepage/Titlepage.tex
@@ -1,4 +1,5 @@
-\title  {JOSM Plugin based on OpenStreetMap with NeTEx Conversion}
+\title  {Integrating OpenStreetMap with Public Transport Network Format NeTEx
+	using the JOSM Editor}
 \authors  {\href{mailto:Labian.Gashi@hsr.ch}{Labian Gashi}
 }
 \addresses  {\groupname\\\deptname\\\univname}
