Documentation - Introduction and first pages

--- a/documentation/Bibliography.bib
+++ b/documentation/Bibliography.bib
@@ -11,3 +11,17 @@
 	Url = {http://texstudio.sourceforge.net/},
 	Note = {[Last~Accessed: 12.05.2019]}
 }
+
+@article{AboutOSMPackt,
+	Author = {Packt},
+	Title = {What is OpenStreetMap?},
+	Url = {https://subscription.packtpub.com/book/hardware_and_creative/9781847197504/1/ch01lvl1sec06/what-is-openstreetmap},
+	Note = {[Last~Accessed: 18.07.2020]}
+}
+
+@misc{WhatIsNeTEx,
+	Author = {European Committee for Standardization - CEN},
+	Title = {Overview | NeTEx},
+	Url = {http://netex-cen.eu/?page_id=11},
+	Note = {[Last~Accessed: 20.07.2020]}
+}
