Documentation - Improvements to Introduction

--- a/documentation/Bibliography.bib
+++ b/documentation/Bibliography.bib
@@ -25,3 +25,10 @@
 	Url = {http://netex-cen.eu/?page_id=11},
 	Note = {[Last~Accessed: 20.07.2020]}
 }
+
+@misc{WhatIsJOSMIntro,
+	Author = {JOSM Community},
+	Title = {JOSM WIKI},
+	Url = {https://josm.openstreetmap.de/},
+	Note = {[Last~Accessed: 20.07.2020]}
+}
