Documentation - Design and Architecture

--- a/documentation/Bibliography.bib
+++ b/documentation/Bibliography.bib
@@ -32,3 +32,16 @@
 	Url = {https://josm.openstreetmap.de/},
 	Note = {[Last~Accessed: 20.07.2020]}
 }
+
+@misc{WhatIsJava,
+	Author = {Parewa Labs Pvt. Ltd.},
+	Title = {Learn Java Programming},
+	Url = {https://www.programiz.com/java-programming},
+	Note = {[Last~Accessed: 21.07.2020]}
+}
+
+@misc{JavaExampleQuadraticEquation,
+	Author = {Parewa Labs Pvt. Ltd.},
+	Title = {Java Program to Find all Roots of a Quadratic Equation},
+	Url = {https://www.programiz.com/java-programming/examples/quadratic-roots-equation}
+}
