--- a/documentation/Main.tex
+++ b/documentation/Main.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper, 12pt, oneside]{Main}
 \renewcommand{\familydefault}{\sfdefault}
 \usepackage{helvet}
-%\usepackage{minted}
+\usepackage{minted}
 \graphicspath{Images/}
 \usepackage[square, numbers, comma, sort&compress]{natbib}
 \usepackage{verbatim} 
