Documentation - Architecture & Design

--- a/documentation/Bibliography.bib
+++ b/documentation/Bibliography.bib
@@ -45,3 +45,10 @@
 	Title = {Java Program to Find all Roots of a Quadratic Equation},
 	Url = {https://www.programiz.com/java-programming/examples/quadratic-roots-equation}
 }
+
+@misc{JOSMPlugins,
+	Author = {JOSM Community},
+	Title = {JOSM/Plugins},
+	Url = {https://wiki.openstreetmap.org/wiki/JOSM/Plugins},
+	Note = {[Last~Accessed: 22.07.2020]}
+}
