Documentation - Architecture and Design, Implementation

--- a/documentation/Bibliography.bib
+++ b/documentation/Bibliography.bib
@@ -52,3 +52,10 @@
 	Url = {https://wiki.openstreetmap.org/wiki/JOSM/Plugins},
 	Note = {[Last~Accessed: 22.07.2020]}
 }
+
+@misc{OSMElements,
+	Author = {OSM Community},
+	Title = {OSM Elements},
+	Url = {https://wiki.openstreetmap.org/wiki/Elements},
+	Note = {[Last~Accessed: 22.07.2020]}
+}
