--- a/documentation/Bibliography.bib
+++ b/documentation/Bibliography.bib
@@ -59,3 +59,18 @@
 	Url = {https://wiki.openstreetmap.org/wiki/Elements},
 	Note = {[Last~Accessed: 22.07.2020]}
 }
+
+@misc{WhatIsLaTeX,
+	Author = {LaTeX3 Project},
+	Title = {LaTeX – A document preparation system},
+	Url = {https://www.latex-project.org/},
+	Note = {[Last~Accessed: 22.07.2020]}
+}
+
+@misc{WhatIsTeXStudio,
+	Author = {Texmaker},
+	Title = {Welcome to TeXstudio},
+	Url = {http://texstudio.sourceforge.net/},
+	Note = {[Last~Accessed: 22.07.2020]}
+}
+
