Documentation - Implementation, Results, Appendices

--- a/documentation/Bibliography.bib
+++ b/documentation/Bibliography.bib
@@ -1,18 +1,4 @@
-@misc{WhatIsLaTeX,
-	Author = {LaTeX3 Project},
-	Title = {LaTeX – A document preparation system},
-	Url = {https://www.latex-project.org/},
-	Note = {[Last~Accessed: 12.05.2019]}
-}
-
-@misc{WhatIsTeXStudio,
-	Author = {Texmaker},
-	Title = {Welcome to TeXstudio},
-	Url = {http://texstudio.sourceforge.net/},
-	Note = {[Last~Accessed: 12.05.2019]}
-}
-
-@article{AboutOSMPackt,
+@misc{AboutOSMPackt,
 	Author = {Packt},
 	Title = {What is OpenStreetMap?},
 	Url = {https://subscription.packtpub.com/book/hardware_and_creative/9781847197504/1/ch01lvl1sec06/what-is-openstreetmap},
@@ -74,3 +60,16 @@
 	Note = {[Last~Accessed: 22.07.2020]}
 }
 
+@misc{LaTExExample,
+	Author = {Sascha Frank - Uni Freiburg},
+	Title = {Examples of Latex},
+	Url = {http://www2.informatik.uni-freiburg.de/~frank/ENG/latex-course/latex-course-1/examples_en.html},
+	Note = {[Last~Accessed: 23.07.2020]}
+}
+
+@misc{WhatIsJAXB,
+	Author = {Oracle Corporation},
+	Title = {Lesson: Introduction to JAXB},
+	Url = {https://docs.oracle.com/javase/tutorial/jaxb/intro/index.html},
+	Note = {[Last~Accessed: 23.07.2020]}
+}
