--- a/documentation/Appendices/Project_Management.tex
+++ b/documentation/Appendices/Project_Management.tex
@@ -6,6 +6,7 @@ The work done was coordinated and supervised also by some of the other SBB emplo
 TBD...(License)\\
 \newline
 The source code for this project (plugin) can be found here:\\ \href{https://gitlab.com/labiangashi/josm-plugin-netex-converter}{https://gitlab.com/labiangashi/josm-plugin-netex-converter}
+\newpage
 \section{Planning and Coordination}
 Only the first stand-up, which was more of a project kick-off meeting was held physically with me and my supervisor in Rapperswil, in the HSR institute to discuss the initial steps and requirements for the project.\\
 After the first stand-up, online conferences were held which consisted of me, my supervisor, Raphael Das Gupta and some of the SBB employees responsible/involved in this project. The meetings were held online because of distance but also because of the COVID-19 pandemic.\\
