--- a/documentation/Appendices/Project_Management.tex
+++ b/documentation/Appendices/Project_Management.tex
@@ -2,8 +2,8 @@
 \section{Organization}
 The work for this project has been done mainly by me (coding completely by me), with the help of of my supervisor: \href{mailto:stefan.keller@hsr.ch}{Prof. Stefan Keller} and with a lot of technical help regarding OSM and transport data from \href{mailto:adrian.aeschbacher2@sbb.ch}{Adrian Aeschbacher}, he was very helpful and gave me a lot of important information for transport data and OSM. He also tested a lot of the exported NeTEx documents from the early stages of the coding part and up until the end.\\
 \newline
-The work done was coordinated and supervised also by some of the other SBB employees, where we held a "stand-up" call every other week in order to find out what was done, the obstacles and the further plans. for the project
-TBD...(License)\\
+The work done was coordinated and supervised also by some of the other SBB employees, where we held a "stand-up" call every other week in order to find out what was done, the obstacles and the further plans.\\
+The plugin is open source and licensed under \href{https://www.gnu.org/licenses/gpl-3.0.en.html}{GPL}.
 \newline
 The source code for this project (plugin) can be found here:\\ \href{https://gitlab.com/labiangashi/josm-plugin-netex-converter}{https://gitlab.com/labiangashi/josm-plugin-netex-converter}
 \newpage
