Documentation - Wrapping up

--- a/documentation/Appendices/Installation.tex
+++ b/documentation/Appendices/Installation.tex
@@ -11,7 +11,7 @@ The below portion of text has been taken directly from the JOSM plugins wiki \hr
 \paragraph{Usual, easy method}\mbox{}\\
 You can easily install plugins from within JOSM as follows
 \begin{enumerate}
-	\item Start JOSM, open the preferences window (Edit→Preferences or use the toolbar icon) and select the plugins tab.
+	\item Start JOSM, open the preferences window (Edit $\rightarrow$ Preferences or use the toolbar icon) and select the plugins tab.
 	\item Click on "Download List" to download the list of available plugins.
 	\item Check the plugins you want installed.
 	\item Click the update button. All new plugins should start downloading and installing.
