--- a/documentation/Bibliography.bib
+++ b/documentation/Bibliography.bib
@@ -73,3 +73,11 @@
 	Url = {https://docs.oracle.com/javase/tutorial/jaxb/intro/index.html},
 	Note = {[Last~Accessed: 23.07.2020]}
 }
+
+@book{WhatIsUnitTesting,
+	Author = {Dorota Huizinga, Adam Kolawa},
+	Title = {Automated Defect Prevention: Best Practices in Software Management},
+	Publisher = {Wiley-IEEE Computer Society Press},
+	Year = {2007},
+	ISBN = {0471491101}
+}
