Documentation - Wrapping up

--- a/documentation/Acknowledgements/Acknowledgements.tex
+++ b/documentation/Acknowledgements/Acknowledgements.tex
@@ -1,6 +1,6 @@
 Foremost, I would like to express my sincere gratitude towards my advisor \href{mailto:stefan.keller@hsr.ch}{Prof. Stefan Keller} for assisting and motivating me throughout the whole journey of creating this project. Without his guidance and persistence, this project would have been hardly possible.\\
 Besides my advisor, I would also like to thank \href{mailto:raphael.das.gupta@hsr.ch}{Raphael Das Gupta} for assisting me in the technical parts of the software and for always being ready to lend a hand in the difficult tasks.\\
 \newline
-My sincere appreciation also goes to some of the \href{https://www.sbb.ch/en/home.html}{SBB} employees, specifically: \href{mailto:richard.lutz@sbb.ch}{Richard Lutz}, \href{mailto:matthias.guenter@sbb.ch}{Matthias Günter} and especially \href{mailto:adrian.aeschbacher2@sbb.ch}{Adrian Aeschbacher} for being concise with the software requirements, for monitoring my work and for their encouragement and insightful help.\\
+My sincere appreciation also goes to some of the \href{https://www.sbb.ch/en/home.html}{SBB} staff members, specifically: \href{mailto:richard.lutz@sbb.ch}{Richard Lutz}, \href{mailto:matthias.guenter@sbb.ch}{Matthias Günter} and especially \href{mailto:adrian.aeschbacher2@sbb.ch}{Adrian Aeschbacher} for being concise with the software requirements, for monitoring my work and for their encouragement and insightful help.\\
 \newline
 Last but not least, I want to thank my family for always being there for me and for continuously encouraging me to be the best version of myself.
