--- a/documentation/Abstract/Abstract.tex
+++ b/documentation/Abstract/Abstract.tex
@@ -1,1 +1,10 @@
-Keywords: \textit{OSM, JOSM, NeTEx, CEN, Plugin, Transport, XML, Java}.
+Exchanging complex transport data between different systems is not an easy task. There are a lot of details that need to be taken care of when doing such things, and of course, things like this need some sort of technology standardization after a while, just so that everyone stays on the same page when exchanging such data.\\
+\newline
+NeTEx (Network Timetable Exchange) is a CEN Technical Standard for exchanging Public Transport schedules and related data among distributed systems. OpenStreetMap (OSM) is a collaborative project for creating a free editable map of the world. It A lot of people and companies contribute to OSM daily to create a realistic map of the world containing the newest additions and the relations between objects in the world.\\
+\newline
+The idea behind this project is creating a plugin for the Java OpenStreetMap editor (JOSM) that converts OSM data into the NeTEx format, which is represented using XML. JOSM is an open-source advanced OSM editor that offers a lot of advanced features for editing and improving the OSM data and has the ability to integrate different plugins, plugins such as this, in order to add new features to the application or improve the usability of it.\\
+\newline
+The plugin uses available OSM data and uses different functions to convert it into the NeTEx format. It then tries to find transport data flaws and urge the users to fix them for more accurate future conversions.\\
+\newline
+
+Keywords: \textit{NeTEx, CEN, OSM, JOSM, CEN, Map, Plugin, Transport, XML, Java}.
