Documentation - Almost finished

--- a/documentation/Main.tex
+++ b/documentation/Main.tex
@@ -38,9 +38,9 @@
 	\input{Acknowledgements/Acknowledgements}
 }
 \newpage
-%\input{Chapters/ManagementSummary}
-%\addtocontents{toc}{\protect\setcounter{tocdepth}{1}}
-%	\newpage
+\input{Chapters/ManagementSummary}
+\addtocontents{toc}{\protect\setcounter{tocdepth}{1}}
+\newpage
 
 \Declaration{
 	\addtocontents{toc}{\vspace{1em}}
