Documentation - Finishing Up

--- a/documentation/Appendices/Project_Management.tex
+++ b/documentation/Appendices/Project_Management.tex
@@ -12,6 +12,7 @@ Only the first stand-up, which was more of a project kick-off meeting was held p
 After the first stand-up, online conferences were held which consisted of me, my supervisor, Raphael Das Gupta and some of the SBB staff members responsible/involved in this project. The meetings were held online because of distance but also because of the COVID-19 pandemic.\\
 An agile software development process was used and each sprint lasted approx. 2 weeks, with some requirements changing at the end of each sprint, some of them shifting and some of them being removed completely (or added). The initial sprints consisted of mainly deciding the technical requirements for the plugin, the scope of the project etc. After that, began the phase of developing the plugin, where requirements were sometimes altered. After the major development, some changes were introduced to the plugin and the final exported documents were tested mostly by Adrian and me.\\
 The last phase was of course, documenting the project.
+\newpage
 \section{Workflow}
 The application was coded using the \href{https://netbeans.org/}{Apache NetBeans IDE}, which is an integrated development environment for Java. It was very convenient for this plugin because of the debugging feature and adding dependencies and libraries was very straight-forward.\\
 \newline
